--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,7 +1,7 @@
 // Use Twitter Bootstrap
-@import '../../node_modules/bootstrap/dist/css/bootstrap-yeti.css';
+@import '../../node_modules/bootstrap/dist/css/bootstrap.css';
 
-@import '../../node_modules/bootstrap/dist/css/variables';
+@import '_variables.scss';
 
 // And finally Bootswatch style
-@import '../../node_modules/bootstrap/dist/css/bootstrap-yeti.scss';
+@import '_bootswatch.scss';
