--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,5 +1,6 @@
 // Use Twitter Bootstrap
-@import '../../node_modules/bootstrap/dist/css/bootstrap.css';
+//@import '../../node_modules/bootstrap/dist/css/bootstrap.css';
+@import 'bootstrap-yeti.css';
 
 @import '_variables.scss';
 
