--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -367,9 +367,9 @@ $navbar-default-border:            darken($navbar-default-bg, 6.5%);
 // Navbar links
 $navbar-default-link-color:                #fff;
 $navbar-default-link-hover-color:          #fff;
-$navbar-default-link-hover-bg:             #272727;
+$navbar-default-link-hover-bg:             #447B3A;
 $navbar-default-link-active-color:         #fff;
-$navbar-default-link-active-bg:            #272727;
+$navbar-default-link-active-bg:            #447B3A;
 $navbar-default-link-disabled-color:       #ccc;
 $navbar-default-link-disabled-bg:          transparent;
 
