--- a/app/styles/_bootswatch.scss
+++ b/app/styles/_bootswatch.scss
@@ -5,11 +5,14 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400,300,700");
 
 // Navbar =====================================================================
+.header{
+  border-top: 3px solid $navbar-hover-green;   
+}
 .navbar {
   border: none;
   border-radius:0;
   font-size: 14px;
-  font-weight: 300;
+  font-weight: 400;
     li:hover {
     cursor: pointer;
 }
@@ -22,6 +25,9 @@
     .navbar-default .navbar-nav > .active > a:focus{
         color: #555;
           background-color: #000;
+    }
+    .navbar-brand{
+     padding-top:5px;   
     }
   &-collapse {
     border-top-color: $dropdown-divider-bg;
@@ -64,17 +70,32 @@
 
   &-default {
     background-color: $navbar-default-bg;
-      -webkit-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75);
-      -moz-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75);
-      box-shadow: 0 1px 3px 0px #777;
-      > .nav > .navbar-nav > li > .active > a:hover,
-      > .nav > .navbar-nav > li > .active > a:focus{
-          color: #555333;
-          background-color: $navbar-hover-green;
+//      -webkit-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75);
+//      -moz-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75);
+//      box-shadow: 0 1px 3px 0px #777;
+    .navbar-nav > li > a {
+        color: $gray-orange
+    }
+    .navbar-nav > .active > a, .navbar-nav > .active > a:hover,
+     .navbar-nav > .active > a, .navbar-nav > .active > a:focus {
+         background-color: transparent;
+         color:$navbar-hover-green;
+    }
+//      > .nav > .navbar-nav > li > .active > a:hover,
+//      > .nav > .navbar-nav > li > .active > a:focus{
+//          color: #555333;
+//          background-color: $navbar-hover-green;
+//          
+//      }
+    .navbar-nav > li > a:hover{
+          color: $navbar-hover-green;
+          background-color: transparent;
           
-      }
-    .navbar-nav > .active > a, .navbar-nav > .active > a:hover  {
-         background-color: $navbar-default-link-hover-bg;
+      } 
+    .navbar-nav{
+        float: right;
+        margin-top: 55px;
+        margin-bottom: 15px;
     }
     .dropdown-menu {
       background-color: $navbar-default-bg;
