--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,10 +1,13 @@
 @import url(bootstrap-yeti.css);
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400,300,700");
+.header {
+  border-top: 3px solid #4e8c42; }
+
 .navbar {
   border: none;
   border-radius: 0;
   font-size: 14px;
-  font-weight: 300; }
+  font-weight: 400; }
   .navbar li:hover {
     cursor: pointer; }
   .navbar .navbar-header {
@@ -14,6 +17,8 @@
   .navbar .navbar-default .navbar-nav > .active > a:focus {
     color: #555;
     background-color: #000; }
+  .navbar .navbar-brand {
+    padding-top: 5px; }
   .navbar-collapse {
     border-top-color: rgba(0, 0, 0, 0.2); }
   .navbar .btn {
@@ -35,16 +40,20 @@
   .navbar .dropdown-header {
     color: rgba(255, 255, 255, 0.5); }
   .navbar-default {
-    background-color: white;
-    -webkit-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.75);
-    box-shadow: 0 1px 3px 0px #777; }
-    .navbar-default > .nav > .navbar-nav > li > .active > a:hover,
-    .navbar-default > .nav > .navbar-nav > li > .active > a:focus {
-      color: #555333;
-      background-color: #B5FF97; }
-    .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover {
-      background-color: #447B3A; }
+    background-color: white; }
+    .navbar-default .navbar-nav > li > a {
+      color: #353331; }
+    .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover,
+    .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus {
+      background-color: transparent;
+      color: #4e8c42; }
+    .navbar-default .navbar-nav > li > a:hover {
+      color: #4e8c42;
+      background-color: transparent; }
+    .navbar-default .navbar-nav {
+      float: right;
+      margin-top: 55px;
+      margin-bottom: 15px; }
     .navbar-default .dropdown-menu {
       background-color: white; }
       .navbar-default .dropdown-menu > li > a,
