--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,5 +1,118 @@
 @import url(bootstrap-yeti.css);
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400,300,700");
+/*! http://responsiveslides.com v1.54 by @viljamis */
+.rslides {
+  position: relative;
+  list-style: none;
+  overflow: hidden;
+  width: 100%;
+  padding: 0;
+  margin: 0; }
+
+.rslides li {
+  -webkit-backface-visibility: hidden;
+  position: absolute;
+  display: none;
+  width: 100%;
+  left: 0;
+  top: 0; }
+
+.rslides li:first-child {
+  position: relative;
+  display: block;
+  float: left; }
+
+.rslides img {
+  display: block;
+  height: auto;
+  float: left;
+  width: 100%;
+  border: 0; }
+
+.foot-links a, .foot-links p {
+  display: block;
+  color: #3f3f3f;
+  transition: all 0.2s ease-in-out;
+  -webkit-transition: all 0.2s ease-in-out;
+  text-decoration: none;
+  font-family: OpenSansRegular, Arial, sans-serif;
+  font-size: 13px;
+  color: #3f3f3f;
+  padding-bottom: 5px;
+  text-shadow: white 1px 1px 0px; }
+
+.foot-links img {
+  padding-top: 5px; }
+
+#footer {
+  background: #f1f1f1;
+  border-top: 1px solid #dedede;
+  margin-top: -2px;
+  padding-top: 30px;
+  padding-bottom: 30px; }
+
+.foot-header {
+  font-family: OpenSansBold, Arial, sans-serif;
+  font-size: 18px;
+  color: #3f3f3f;
+  padding-bottom: 20px;
+  text-shadow: white 1px 1px 0px; }
+
+#footer .container {
+  max-width: 1100px; }
+
+#bottom-footer {
+  margin-bottom: 20px;
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+  padding-top: 15px;
+  padding-bottom: 15px; }
+
+#bottom-footer a {
+  text-decoration: none;
+  color: #626262;
+  -webkit-transition: all .2s ease-in-out;
+  -moz-transition: all .2s ease-in-out;
+  -o-transition: all .2s ease-in-out;
+  -ms-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+  font-size: 12px;
+  padding: 0px 15px;
+  border-right: 1px solid #ccc;
+  font-family: 'OpenSansRegular', Arial, sans-serif;
+  font-size: 13px;
+  color: #626262;
+  padding: 0 12px;
+  text-shadow: 1px 1px 0 white; }
+
+#bottom-footer .phone img {
+  margin-right: 7px; }
+
+#bottom-footer .phone .red {
+  font-size: 22px;
+  margin-top: -7px;
+  font-family: 'OpenSansRegular', Arial, sans-serif;
+  font-size: 18px !important;
+  color: #d10029 !important;
+  position: relative;
+  top: -5px;
+  text-shadow: 1px 1px 0 white !important; }
+
+#bottom-footer .phone .red small {
+  font-family: 'OpenSansRegular', Arial, sans-serif;
+  font-size: 12px !important;
+  display: block;
+  color: #626262 !important;
+  text-shadow: 1px 1px 0 white !important;
+  margin-top: -5px; }
+
+#final-footer {
+  font-size: 11px;
+  color: #666; }
+
+#final-footer i {
+  font-size: auto; }
+
 .header {
   border-top: 3px solid #4e8c42; }
 
@@ -52,8 +165,8 @@
       background-color: transparent; }
     .navbar-default .navbar-nav {
       float: right;
-      margin-top: 55px;
-      margin-bottom: 15px; }
+      margin-top: 45px;
+      margin-bottom: 20px; }
     .navbar-default .dropdown-menu {
       background-color: white; }
       .navbar-default .dropdown-menu > li > a,
