--- a/app/styles/_bootswatch.scss
+++ b/app/styles/_bootswatch.scss
@@ -54,7 +54,7 @@
 	padding-top: 5px;
 }
 #footer{
-  background: rgb(241, 241, 241);
+  //background: rgb(241, 241, 241);
   border-top: 1px solid rgb(222, 222, 222);
   margin-top: -2px;
   padding-top: 30px;
@@ -124,9 +124,6 @@
 	font-size: auto;
 }
 // Navbar =====================================================================
-.header{
-  border-top: 3px solid $navbar-hover-green;   
-}
 .navbar {
   border: none;
   border-radius:0;
@@ -188,7 +185,8 @@
   }
 
   &-default {
-    background-color: $navbar-default-bg;
+      border-top:3px solid #4e8c42;
+      background-color: $navbar-default-bg;
 //      -webkit-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75);
 //      -moz-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75);
 //      box-shadow: 0 1px 3px 0px #777;
