--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,33 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
+<div class="container" style="color:white; padding:50px;">
+<div style="text-align:center;">
+    <h1 style="text-shadow: 1px 1px 1px #000; font-style:italic;">We do payments differently</h1>
+  <br><br>
+  <p><a class="btn btn-lg btn-success" ng-href="#/">TALK TO AN EXPERT</span></a></p>
 </div>
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
+<div class="row" style="text-shadow: 1px 1px 1px #000;">
+  <div class="col-xs-12 col-sm-4">
+    
+      <h4><strong>Simple Settlement</strong></h4>
+      <i class="fa fa-check"></i> 24 Hour Batches<br>
+      <i class="fa fa-check"></i> Cards &amp; Checks Separate<br>
+      <i class="fa fa-check"></i> Settlements always match reports<br>
+        
+</div>    
+ <div class="col-xs-12 col-sm-4">
+     <h4><strong>Industry-Leading Customer Service</strong></h4>
+   <i class="fa fa-check"></i> Talk to a live expert in moments, not hours<br>
+      <i class="fa fa-check"></i> Work with the same expert, from notification<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;to resolution<br>
+      <i class="fa fa-check"></i> 96% of service calls are resolved within 2<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;days<br>
+  
+</div>    
 
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+ <div class="col-xs-12 col-sm-4">
+     <h4><strong>Industry-Standard Security</strong></h4>
+   <i class="fa fa-check"></i> PCI DSS Level 1 Service Provider<br>
+      <i class="fa fa-check"></i> SSAE-16 Compliant<br>
+      <i class="fa fa-check"></i> NACHA Compliant<br>
+     <i class="fa fa-check"></i> Internal and external penetration tests<br>
+</div>    
+</div>
 </div>
