--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -112,6 +112,14 @@
 #final-footer i {
   font-size: auto; }
 
+.bullet-box-shadow {
+  padding: 5px 10px 25px;
+  margin-left: 5px;
+  background-color: rgba(0, 0, 0, 0.7);
+  -webkit-box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.2); }
+
 .navbar {
   border: none;
   border-radius: 0;
@@ -157,12 +165,12 @@
     .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus {
       background-color: transparent;
       color: #4e8c42; }
-    .navbar-default .navbar-nav > li > a:hover {
+    .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
       color: #4e8c42;
       background-color: transparent; }
     .navbar-default .navbar-nav {
       float: right;
-      margin-top: 45px;
+      margin-top: 5px;
       margin-bottom: 20px; }
     .navbar-default .dropdown-menu {
       background-color: white; }
