--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,33 +1,30 @@
-<div class="container" style="color:white; padding:50px;">
+
+<div class="container" style="color:white;">
 <div style="text-align:center;">
     <h1 style="text-shadow: 1px 1px 1px #000; font-style:italic;">We do payments differently</h1>
   <br><br>
   <p><a class="btn btn-lg btn-success" ng-href="#/">TALK TO AN EXPERT</span></a></p>
 </div>
 
-<div class="row" style="text-shadow: 1px 1px 1px #000;">
-  <div class="col-xs-12 col-sm-4">
-    
+<div style="text-shadow: 1px 1px 1px #000; text-align:center;">
+  <div class="col-xs-12 col-sm-4 bullet-box-shadow">
       <h4><strong>Simple Settlement</strong></h4>
       <i class="fa fa-check"></i> 24 Hour Batches<br>
       <i class="fa fa-check"></i> Cards &amp; Checks Separate<br>
       <i class="fa fa-check"></i> Settlements always match reports<br>
-        
 </div>    
- <div class="col-xs-12 col-sm-4">
-     <h4><strong>Industry-Leading Customer Service</strong></h4>
-   <i class="fa fa-check"></i> Talk to a live expert in moments, not hours<br>
-      <i class="fa fa-check"></i> Work with the same expert, from notification<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;to resolution<br>
-      <i class="fa fa-check"></i> 96% of service calls are resolved within 2<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;days<br>
+ <div class="col-xs-12 col-sm-4 bullet-box-shadow">
+     <h4><strong>Industry-Leading Service</strong></h4>
+   <i class="fa fa-check"></i> Talk to a LIVE expert within moments<br>
+      <i class="fa fa-check"></i> Speedy resolution upon notification<br>
+      <i class="fa fa-check"></i> 97% of service calls resolved within 2 days<br>
   
 </div>    
-
- <div class="col-xs-12 col-sm-4">
+ <div class="col-xs-12 col-sm-4 bullet-box-shadow">
      <h4><strong>Industry-Standard Security</strong></h4>
    <i class="fa fa-check"></i> PCI DSS Level 1 Service Provider<br>
       <i class="fa fa-check"></i> SSAE-16 Compliant<br>
       <i class="fa fa-check"></i> NACHA Compliant<br>
-     <i class="fa fa-check"></i> Internal and external penetration tests<br>
 </div>    
 </div>
 </div>
