--- a/app/styles/_bootswatch.scss
+++ b/app/styles/_bootswatch.scss
@@ -125,7 +125,7 @@
 }
 .bullet-box-shadow{
   padding:5px 10px 25px;
-    margin-left: 5px;
+    border: 3px solid rgba(0, 0, 0, 0.2);
     background-color: rgba(0, 0, 0, 0.7); 
     -webkit-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.2);
 -moz-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.2);
