--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,30 +1,37 @@
-
-<div class="container" style="color:white;">
+<div class="container" style="color:white; padding-top:50px;">
 <div style="text-align:center;">
-    <h1 style="text-shadow: 1px 1px 1px #000; font-style:italic;">We do payments differently</h1>
+    <div style="text-shadow: 1px 1px 1px #000; font-style:italic;">
+        <h1><strong>We do payments differently</strong></h1>
+        <h2 style="margin-top:5px;">Let's figure out how you can start accepting payments today, your way</h2>
+    </div>    
   <br><br>
   <p><a class="btn btn-lg btn-success" ng-href="#/">TALK TO AN EXPERT</span></a></p>
 </div>
-
-<div style="text-shadow: 1px 1px 1px #000; text-align:center;">
-  <div class="col-xs-12 col-sm-4 bullet-box-shadow">
+ <br><br>
+<div class="row" style="text-shadow: 1px 1px 1px #000; text-align:center;">
+  <div class="col-xs-12 col-sm-4" style="padding:5px;">
+      <div class="bullet-box-shadow">
       <h4><strong>Simple Settlement</strong></h4>
       <i class="fa fa-check"></i> 24 Hour Batches<br>
       <i class="fa fa-check"></i> Cards &amp; Checks Separate<br>
       <i class="fa fa-check"></i> Settlements always match reports<br>
-</div>    
- <div class="col-xs-12 col-sm-4 bullet-box-shadow">
+    </div>
+    </div>  
+ <div class="col-xs-12 col-sm-4" style="padding:5px;">
+     <div class="bullet-box-shadow">
      <h4><strong>Industry-Leading Service</strong></h4>
    <i class="fa fa-check"></i> Talk to a LIVE expert within moments<br>
       <i class="fa fa-check"></i> Speedy resolution upon notification<br>
       <i class="fa fa-check"></i> 97% of service calls resolved within 2 days<br>
-  
+     </div>
 </div>    
- <div class="col-xs-12 col-sm-4 bullet-box-shadow">
+ <div class="col-xs-12 col-sm-4" style="padding:5px;">
+    <div class="bullet-box-shadow">
      <h4><strong>Industry-Standard Security</strong></h4>
    <i class="fa fa-check"></i> PCI DSS Level 1 Service Provider<br>
       <i class="fa fa-check"></i> SSAE-16 Compliant<br>
       <i class="fa fa-check"></i> NACHA Compliant<br>
+     </div>    
 </div>    
 </div>
 </div>
