css moved around

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,4 @@
-<div class="container" style="color:white; padding-top:50px;">
+<div class="container" style="color:white; padding-top:50px; margin-top:200px;">
 <div style="text-align:center;">
     <div style="text-shadow: 1px 1px 1px #000; font-style:italic;">
         <h1><strong>We do payments differently</strong></h1>
