--- a/app/styles/_bootswatch.scss
+++ b/app/styles/_bootswatch.scss
@@ -54,10 +54,10 @@
 	padding-top: 5px;
 }
 #footer{
-  //background: rgb(241, 241, 241);
-  border-top: 1px solid rgb(222, 222, 222);
+  background-color: #fff;
+  //border-top: 1px solid rgb(222, 222, 222);
   margin-top: -2px;
-  padding-top: 30px;
+  padding-top: 60px;
   padding-bottom: 30px;
  }
 .foot-header{
@@ -69,7 +69,7 @@
 }
   
 #footer .container{
-	max-width: 1100px;
+//	max-width: 1100px;
 }
 #bottom-footer{
   margin-bottom: 20px;
