--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,3 +1,4 @@
+
 <div class="container" style="color:white; padding-top:50px; margin-top:200px;">
 <div style="text-align:center;">
     <div style="text-shadow: 1px 1px 1px #000; font-style:italic;">
@@ -5,11 +6,11 @@
         <h2 style="margin-top:5px;">Let's figure out how you can start accepting payments today, your way</h2>
     </div>    
   <br><br>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">TALK TO AN EXPERT</span></a></p>
+  <p><a id="expertCall" class="btn btn-lg btn-success" ng-href="#/">TALK TO AN EXPERT</a></p>
 </div>
  <br><br>
-<div class="row" style="text-shadow: 1px 1px 1px #000; text-align:center;">
-  <div class="col-xs-12 col-sm-4" style="padding:5px;">
+<div class="row" >
+  <div class="col-xs-12 col-sm-4" style="">
       <div class="bullet-box-shadow">
       <h4><strong>Simple Settlement</strong></h4>
       <i class="fa fa-check"></i> 24 Hour Batches<br>
@@ -17,7 +18,7 @@
       <i class="fa fa-check"></i> Settlements always match reports<br>
     </div>
     </div>  
- <div class="col-xs-12 col-sm-4" style="padding:5px;">
+ <div class="col-xs-12 col-sm-4" style="">
      <div class="bullet-box-shadow">
      <h4><strong>Industry-Leading Service</strong></h4>
    <i class="fa fa-check"></i> Talk to a LIVE expert within moments<br>
@@ -25,7 +26,7 @@
       <i class="fa fa-check"></i> 97% of service calls resolved within 2 days<br>
      </div>
 </div>    
- <div class="col-xs-12 col-sm-4" style="padding:5px;">
+ <div class="col-xs-12 col-sm-4" style="">
     <div class="bullet-box-shadow">
      <h4><strong>Industry-Standard Security</strong></h4>
    <i class="fa fa-check"></i> PCI DSS Level 1 Service Provider<br>
@@ -35,3 +36,4 @@
 </div>    
 </div>
 </div>
+
