--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,6 +1,6 @@
 <div class="container">
 <div class="row">
-  <div class="col-xs-12" style="color:white; text-align:left; padding:50px; text-shadow: 1px 1px 1px #000;">
+  <div class="col-xs-12" style="color:white; text-align:left; padding:50px; text-shadow: 1px 1px 1px #000; color:white; padding-top:50px; height:500px; width:100%;">
       <div class="bullet-box-shadow" style="padding:5px 45px 30px;">
       <h1>About CSI</h1>
           <p>Since inception in 1999 the goal has been to provide multiple methods of payment, collection, billing, data movement with unsurpassed protection of data and funds. To date there has been no compromise. CSI’s core principles have always put the client’s needs and their customer’ payment preferences first. CSI understands that customers shape the payment options that clients expect CSI to provide. CSI is prepared for the ‘cashless society’.</p> 
