--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,5 @@
 
-<div class="container" style="color:white; padding-top:50px; margin-top:200px;">
+<div class="container" style="color:white; padding-top:50px; height:500px;">
 <div style="text-align:center;">
     <div style="text-shadow: 1px 1px 1px #000; font-style:italic;">
         <h1><strong>We do payments differently</strong></h1>
@@ -10,7 +10,7 @@
 </div>
  <br><br>
 <div class="row" >
-  <div class="col-xs-12 col-sm-4" style="">
+  <div class="col-xs-12 col-sm-4" style="padding-bottom:5px;">
       <div class="bullet-box-shadow">
       <h4><strong>Simple Settlement</strong></h4>
       <i class="fa fa-check"></i> 24 Hour Batches<br>
@@ -18,7 +18,7 @@
       <i class="fa fa-check"></i> Settlements always match reports<br>
     </div>
     </div>  
- <div class="col-xs-12 col-sm-4" style="">
+ <div class="col-xs-12 col-sm-4" style="padding-bottom:5px;">
      <div class="bullet-box-shadow">
      <h4><strong>Industry-Leading Service</strong></h4>
    <i class="fa fa-check"></i> Talk to a LIVE expert within moments<br>
@@ -26,7 +26,7 @@
       <i class="fa fa-check"></i> 97% of service calls resolved within 2 days<br>
      </div>
 </div>    
- <div class="col-xs-12 col-sm-4" style="">
+ <div class="col-xs-12 col-sm-4" style="padding-bottom:5px;">
     <div class="bullet-box-shadow">
      <h4><strong>Industry-Standard Security</strong></h4>
    <i class="fa fa-check"></i> PCI DSS Level 1 Service Provider<br>
