--- a/app/views/media.html
+++ b/app/views/media.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="">
 <div class="row">
   <div class="col-xs-12" style="color:white; text-align:left; padding:50px; text-shadow: 1px 1px 1px #000;">
       <div class="bullet-box-shadow" style="padding:5px 45px 30px;">
