--- a/app/styles/_bootswatch.scss
+++ b/app/styles/_bootswatch.scss
@@ -131,6 +131,13 @@
 -moz-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.2);
 box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.2);   
 }
+body.modal-open {
+overflow: auto;
+}
+body{
+ padding-right:0px !important;
+  margin-right:0px !important;  
+}
 // Navbar =====================================================================
 .navbar {
   border: none;
