--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -48,7 +48,7 @@
   background-color: #fff;
 /*  margin-top: -2px;*/
   padding-top: 60px;
-    padding-left:50px;
+/*    padding-left:50px;*/
   padding-bottom: 30px; }
 
 .foot-header {
@@ -112,6 +112,14 @@
   -webkit-box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.2); }
+
+body.modal-open {
+overflow: auto;
+}
+body{
+ padding-right:0px !important;
+  margin-right:0px !important;  
+}
 
 .navbar {
   border: none;
