latest responsive commit

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -351,6 +351,8 @@ $container-lg:                 $container-large-desktop;
 //== Navbar
 //
 //##
+//logo
+$logo-green:                       #4e8c42;
 
 // Basics of a navbar
 $navbar-height:                    45px;
