--- a/app/styles/_bootswatch.scss
+++ b/app/styles/_bootswatch.scss
@@ -56,7 +56,7 @@
 #footer{
   background-color: #fff;
   //border-top: 1px solid rgb(222, 222, 222);
-  margin-top: -2px;
+//  margin-top: -2px;
   padding-top: 60px;
   padding-bottom: 30px;
  }
@@ -200,14 +200,20 @@ body{
   }
 
   &-default {
-      border-top:3px solid #4e8c42;
+      border-top:3px solid $logo-green;
       background-color: $navbar-default-bg;
 //      -webkit-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75);
 //      -moz-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75);
 //      box-shadow: 0 1px 3px 0px #777;
+    .navbar-toggle .icon-bar{
+        background-color: $logo-green;
+    }
     .navbar-nav > li > a {
         color: $gray-orange
     }
+      .navbar-collapse{
+       border-color: #F7FAF7;   
+      }
     .navbar-nav > .active > a, .navbar-nav > .active > a:hover,
      .navbar-nav > .active > a, .navbar-nav > .active > a:focus {
          background-color: transparent;
@@ -224,10 +230,12 @@ body{
           background-color: transparent;
           
       } 
-    .navbar-nav{
+    @media (min-width: 768px) {  
+    .navbar-nav {
         float: right;
         margin-top: 5px;
         margin-bottom: 20px;
+    }
     }
     .dropdown-menu {
       background-color: $navbar-default-bg;
