--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -118,6 +118,9 @@
 
 body.modal-open {
   overflow: auto; }
+#salesModal label{
+    font-size: 14px;
+}
 
 body {
   padding-right: 0px !important;
