--- a/app/views/media.html
+++ b/app/views/media.html
@@ -1,10 +1,20 @@
-<div class="container" style="">
-<div class="row">
-  <div class="col-xs-12" style="color:white; text-align:left; padding:50px; text-shadow: 1px 1px 1px #000;">
+<div class="row" style="background-color:#fff; margin-top:100px; padding-top:100px; padding-bottom:150px; min-height:700px;">
+  <div class="container" style="">
+    <div class="col-xs-12" style="color:#3f3f3f; text-align:left; padding:50px;">
+<!--
       <div class="bullet-box-shadow" style="padding:5px 45px 30px;">
       <h1>Media</h1>
          
       </div>
+-->
+      <div class="col-xs-3"><h4>Collector Solutions, Inc.</h4>
+          <span style="font-size:12px;">All files are in PDF format. You will need the latest version of <a href="http://get.adobe.com/reader/" target="_blank">Adobe Reader</a> to view.</span></div> 
+     <div class="col-xs-1">
+      
+    </div> 
+      <div class="col-xs-8"><h4><i class="fa fa-bullhorn"></i>  Collector Solutions, Inc. Newsletter</h4>
+      
+    </div> 
     </div>
 </div>
 </div>
