--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -44,11 +44,6 @@
 .foot-links img {
   padding-top: 5px; }
 
-#footer {
-  background-color: #fff;
-  padding-top: 60px;
-  padding-bottom: 30px; }
-
 .foot-header {
   font-family: OpenSansBold, Arial, sans-serif;
   font-size: 18px;
@@ -66,40 +61,14 @@
 #bottom-footer a {
   text-decoration: none;
   color: #626262;
-  -webkit-transition: all .2s ease-in-out;
-  -moz-transition: all .2s ease-in-out;
-  -o-transition: all .2s ease-in-out;
-  -ms-transition: all .2s ease-in-out;
-  transition: all .2s ease-in-out;
   font-size: 12px;
   padding: 0px 15px;
   border-right: 1px solid #ccc;
   font-family: 'OpenSansRegular', Arial, sans-serif;
   font-size: 13px;
   color: #626262;
-  padding: 0 12px;
+  padding: 0;
   text-shadow: 1px 1px 0 white; }
-
-#bottom-footer .phone img {
-  margin-right: 7px; }
-
-#bottom-footer .phone .red {
-  font-size: 22px;
-  margin-top: -7px;
-  font-family: 'OpenSansRegular', Arial, sans-serif;
-  font-size: 18px !important;
-  color: #d10029 !important;
-  position: relative;
-  top: -5px;
-  text-shadow: 1px 1px 0 white !important; }
-
-#bottom-footer .phone .red small {
-  font-family: 'OpenSansRegular', Arial, sans-serif;
-  font-size: 12px !important;
-  display: block;
-  color: #626262 !important;
-  text-shadow: 1px 1px 0 white !important;
-  margin-top: -5px; }
 
 #final-footer {
   font-size: 11px;
@@ -118,14 +87,30 @@
 
 body.modal-open {
   overflow: auto; }
-#salesModal label{
-    font-size: 14px;
-}
 
-body {
-  padding-right: 0px !important;
-  margin-right: 0px !important; }
+.title-feed span {
+  text-shadow: 1px 1px 1px #000;
+  font-size: 48px;
+  line-height: 1; }
 
+.title-feed {
+  height: auto;
+  padding: 25px;
+  background-color: rgba(0, 0, 0, 0.3);
+  color: white;
+  border: none;
+  position: fixed;
+  top: 118px;
+  text-align: center;
+  z-index: 999; }
+
+@media (max-width: 768px) {
+  .title-feed {
+    top: 47px;
+    padding: 15px; }
+
+  .title-feed span {
+    font-size: 36px; } }
 .navbar {
   border: none;
   border-radius: 0;
@@ -133,8 +118,6 @@ body {
   font-weight: 400; }
   .navbar li:hover {
     cursor: pointer; }
-  .navbar .navbar-header {
-    margin-right: 10px; }
   .navbar .navbar-toggle:hover .icon-bar {
     background-color: #b3b3b3; }
   .navbar .navbar-default .navbar-nav > .active > a:focus {
