--- a/app/styles/_bootswatch.scss
+++ b/app/styles/_bootswatch.scss
@@ -102,15 +102,15 @@ box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.2);
 body.modal-open {
 overflow: auto;
 }
-//body{
-// padding-right:0px !important;
-//  margin-right:0px !important;  
-//}
+
+body{
+overflow-x:hidden !important;
+}
 .title-feed span{
    text-shadow: 1px 1px 1px #000; font-size:48px; line-height:1;
 }
 .title-feed{
-  height:auto; padding:25px; background-color:rgba(0, 0, 0, 0.3); color:white; border:none; position:fixed; top:118px; text-align:center; z-index:999;   
+  height:auto; padding:25px; background-color:rgba(0, 0, 0, 0.3); color:white; border:none; position:fixed; top:118px; text-align:center; z-index:999; width:100%;  
 }
  @media (max-width: 768px) {  
     .title-feed{
