--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -88,6 +88,9 @@
 body.modal-open {
   overflow: auto; }
 
+body {
+  overflow-x: hidden !important; }
+
 .title-feed span {
   text-shadow: 1px 1px 1px #000;
   font-size: 48px;
@@ -102,7 +105,8 @@ body.modal-open {
   position: fixed;
   top: 118px;
   text-align: center;
-  z-index: 999; }
+  z-index: 999;
+  width: 100%; }
 
 @media (max-width: 768px) {
   .title-feed {
@@ -170,16 +174,16 @@ body.modal-open {
       background-color: white; }
       .navbar-default .dropdown-menu > li > a,
       .navbar-default .dropdown-menu > li > a:focus {
-        color: #fff; }
+        color: white; }
       .navbar-default .dropdown-menu > li > a:hover,
       .navbar-default .dropdown-menu > .active > a,
       .navbar-default .dropdown-menu > .active > a:hover {
-        background-color: #447B3A; }
+        background-color: #447b3a; }
   .navbar-inverse .dropdown-menu {
     background-color: #008cba; }
     .navbar-inverse .dropdown-menu > li > a,
     .navbar-inverse .dropdown-menu > li > a:focus {
-      color: #fff; }
+      color: white; }
     .navbar-inverse .dropdown-menu > li > a:hover,
     .navbar-inverse .dropdown-menu > .active > a,
     .navbar-inverse .dropdown-menu > .active > a:hover {
@@ -205,7 +209,7 @@ body.modal-open {
   margin-bottom: 0; }
 .btn-group .dropdown-toggle.btn-default ~ .dropdown-menu {
   background-color: #e7e7e7;
-  border-color: #ccc; }
+  border-color: #cccccc; }
   .btn-group .dropdown-toggle.btn-default ~ .dropdown-menu > li > a {
     color: #333333; }
   .btn-group .dropdown-toggle.btn-default ~ .dropdown-menu > li > a:hover {
@@ -214,35 +218,35 @@ body.modal-open {
   background-color: #008cba;
   border-color: #0079a1; }
   .btn-group .dropdown-toggle.btn-primary ~ .dropdown-menu > li > a {
-    color: #fff; }
+    color: white; }
   .btn-group .dropdown-toggle.btn-primary ~ .dropdown-menu > li > a:hover {
     background-color: #006d91; }
 .btn-group .dropdown-toggle.btn-success ~ .dropdown-menu {
   background-color: #43ac6a;
   border-color: #3c9a5f; }
   .btn-group .dropdown-toggle.btn-success ~ .dropdown-menu > li > a {
-    color: #fff; }
+    color: white; }
   .btn-group .dropdown-toggle.btn-success ~ .dropdown-menu > li > a:hover {
     background-color: #388f58; }
 .btn-group .dropdown-toggle.btn-info ~ .dropdown-menu {
   background-color: #5bc0de;
   border-color: #46b8da; }
   .btn-group .dropdown-toggle.btn-info ~ .dropdown-menu > li > a {
-    color: #fff; }
+    color: white; }
   .btn-group .dropdown-toggle.btn-info ~ .dropdown-menu > li > a:hover {
     background-color: #39b3d7; }
 .btn-group .dropdown-toggle.btn-warning ~ .dropdown-menu {
-  background-color: #E99002;
+  background-color: #e99002;
   border-color: #d08002; }
   .btn-group .dropdown-toggle.btn-warning ~ .dropdown-menu > li > a {
-    color: #fff; }
+    color: white; }
   .btn-group .dropdown-toggle.btn-warning ~ .dropdown-menu > li > a:hover {
     background-color: #c17702; }
 .btn-group .dropdown-toggle.btn-danger ~ .dropdown-menu {
-  background-color: #F04124;
+  background-color: #f04124;
   border-color: #ea2f10; }
   .btn-group .dropdown-toggle.btn-danger ~ .dropdown-menu > li > a {
-    color: #fff; }
+    color: white; }
   .btn-group .dropdown-toggle.btn-danger ~ .dropdown-menu > li > a:hover {
     background-color: #dc2c0f; }
 
@@ -292,7 +296,7 @@ input[type="checkbox"] {
   font-weight: 300; }
 
 .breadcrumb {
-  border: 1px solid #ddd;
+  border: 1px solid #dddddd;
   border-radius: 3px;
   font-size: 10px;
   font-weight: 300;
@@ -389,5 +393,3 @@ input[type="checkbox"] {
 
 .modal .close {
   color: #222222; }
-
-/*# sourceMappingURL=main.css.map */
