added privacy policy

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,15 +1,19 @@
-<div class="container">
-<div class="row">
-  <div class="col-xs-12" style="color:white; text-align:left; padding:50px; text-shadow: 1px 1px 1px #000; color:white; padding-top:50px; height:500px; width:100%;">
-      <div class="bullet-box-shadow" style="padding:5px 45px 30px;">
-      <h1>About CSI</h1>
-          <p>Since inception in 1999 the goal has been to provide multiple methods of payment, collection, billing, data movement with unsurpassed protection of data and funds. To date there has been no compromise. CSI’s core principles have always put the client’s needs and their customer’ payment preferences first. CSI understands that customers shape the payment options that clients expect CSI to provide. CSI is prepared for the ‘cashless society’.</p> 
 
-          <p>CSI’s growth this last decade was with the electronic processing of credit card, debit card, and electronic check payments. CSI’s ‘elastic’ technology platform is poised for quick adoption and adaptation of future client expectations. This exceptionally-responsive payment solution demands a sophistication that distinguishes CSI from its competition.</p>
+<div class="row" style="background-color:#fff; padding-top:100px; margin-top:-8%; min-height:600px;">
+  <div class="container">
+    <div class="col-xs-12" style="color:#1b1b1b; text-align:left; padding:50px; padding-top:50px;">
+     
+      <h1>About CSI</h1>
+        <img class="img-thumbnail" style="height:auto; width:auto; max-width:550px; max-height:550px; float:right; margin-left:25px;" src="http://collectorsolutions.com/images/group.jpg" alt="group photo"/>
+          <p style="width:100%;">Since inception in 1999 the goal has been to provide multiple methods of payment, collection, billing, data movement with unsurpassed protection of data and funds. To date there has been no compromise. CSI’s core principles have always put the client’s needs and their customer’ payment preferences first. CSI understands that customers shape the payment options that clients expect CSI to provide. CSI is prepared for the ‘cashless society’. 
+              <p>
+          CSI’s growth this last decade was with the electronic processing of credit card, debit card, and electronic check payments. CSI’s ‘elastic’ technology platform is poised for quick adoption and adaptation of future client expectations. This exceptionally-responsive payment solution demands a sophistication that distinguishes CSI from its competition.</p>
 
       <h1>CSI's Mission</h1>
           <p>The CSI mission is to provide its clients with an integrated solution; satisfying diverse cultural, technological, business, financial and data integration demand on internet-enabled platforms. These platforms integrate the client solution with all related industry partners. Empowering them with the ability to bridge their business enterprise packages into one unified solution.</p>
-      </div>
+      
     </div>
-</div>
+      
+      </div>
+    
 </div>
