about was beefed up

--- a/app/views/solution.html
+++ b/app/views/solution.html
@@ -1,10 +1,8 @@
-<div class="container" style="">
-<div class="row">
-  <div class="col-xs-12" style="color:white; text-align:left; padding:50px; text-shadow: 1px 1px 1px #000;">
-      <div class="bullet-box-shadow" style="padding:5px 45px 30px;">
-      <h1>Solutions</h1>
-         
-      </div>
+<div class="row" style="background-color:#fff; padding-top:100px; margin-top:-8%; min-height:600px;">
+  <div class="container" style="">
+     
+    <div class="col-xs-12" style="color:#3f3f3f; text-align:left; padding:50px;">
+        
     </div>
 </div>
 </div>
